# OpenBrain

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  METHODOLOGY.md  README.md  WHITE_PAPER.md  pyproject.toml
launchd/: com.openbrain.bridge.plist
open_brain/: README.md  __init__.py  __main__.py  adapters.py  capture.py  cli.py  config.py  crypto.py  db.py  epoch.py  hashing.py  im_bridge.py  mcp_server.py  merkle.py  reasoning.py  sanitise.py  setup_db.sql  setup_wizard.py  troubleshoot.py
open_brain/api/: __init__.py  crypto_facade.py  im_facade.py  memory_facade.py
open_brain/coordination/: __init__.py  bus.py  channel.py  circuit_breaker.py  presence.py  protocol.py  sequencer.py
open_brain/im/: __init__.py  __main__.py  migrate.py  schema.sql  service.py  store.py
open_brain/migrations/: 001_add_hash_columns.sql  002_add_signature_column.sql  003_epochs.sql  004_anchor_metadata.sql  005_project_index.sql
open_brain/tests/: conftest.py  test_adapters.py  test_bridge.py  test_capture.py  test_cli.py  test_config.py  test_coordination.py  test_crypto.py  test_db.py  test_degradation.py  test_epoch.py  test_hashing.py  test_im_migrate.py  test_im_service.py  test_im_store.py  test_integrity.py  test_mcp.py  test_merkle.py  test_reasoning.py  test_sanitise.py  test_signing_integration.py  test_unified_api.py
scripts/: install.ps1  install.sh
systemd/: openbrain-bridge.service
templates/: CLAUDE.md.example  MEMORY.md.example  RECOVERY.md  SHORTCUTS.md
tools/: im_service.py  ob_bridge.py  projects.json
